[package]
name = "acmer-cli"
version = "0.0.3"
edition = "2021"
license = "MIT"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "ACME TLS certificates management utility"
categories = ["cryptography", "network-programming", "command-line-utilities"]
keywords = ["tls", "acme"]
documentation = "https://docs.rs/acmer"
repository = "https://github.com/reu/acmer"

[dependencies]
acmer = { path = "../acmer", features = ["dynamodb-store"] }
hyper = { version = "0.14.23", features = ["http1", "http2", "server", "stream"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
