[package]
name = "acmer"
version = "0.0.4"
edition = "2021"
license = "MIT"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "ACME TLS certificates management library"
categories = ["cryptography", "network-programming", "asynchronous"]
keywords = ["tls", "acme"]
documentation = "https://docs.rs/acmer"
repository = "https://github.com/reu/acmer"

[features]
dynamodb-store = ["aws-config", "aws-sdk-dynamodb"]

[dependencies]
async-trait = "0.1.60"
aws-config = { version = "0.52.0", optional = true }
aws-sdk-dynamodb = { version = "0.22.0", optional = true }
dashmap = "5.4.0"
papaleguas = "0.0.4"
pem-rfc7468 = "0.6.0"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
sha2 = { version = "0.10.6", features = ["oid"] }
thiserror = "1.0.40"
tokio = { version = "1.23.0", features = ["full"] }
tokio-rustls = "0.23.4"
tokio-stream = { version = "0.1.11", features = ["io-util", "net"] }
tracing = "0.1"
x509-cert = { version = "0.1.1", features = ["std"] }

[dev-dependencies]
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
tempfile = "3.3.0"
